# ijengine

include/: engine.h  kernel.h
kernel/sdl2/: CMakeLists.txt  sdl2kernel.cpp  sdl2kernel.h
src/: engine.cpp  game.cpp  game_object.cpp
